# Novoscan

./: .dockerignore  .env.docker  .env.example  .eslintrc.json  .gitignore  .gitpod.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPONSORS.md  commitlint.config.js  docker-compose.yml  next.config.js  package-lock.json  package.json  playwright.config.ts  plugin-manifest.schema.json  tailwind.config.ts  vercel.json  vitest.config.ts
.agents/: context.md  prompts.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
admin-cli/: index.ts  package-lock.json  package.json  tsconfig.json
docker/: redis.conf
docs/: DOCKER.md  api.md  architecture.md  demo-script.md  deployment.md  env-reference.md  good-first-issues.md
migrations/: 000_extensions_and_auth.sql  001_core_tables.sql  002_user_system.sql  003_agent_memory.sql  004_feature_system.sql  005_tracker.sql  006_casevault_mcp.sql  007_social.sql  008_innovation_extras.sql  009_seed_data.sql  010_auth_users.sql  README.md
public/: llms-full.txt  llms.txt  manifest.json  sw.js
rust/novoscan-core/: Cargo.toml
rust/novoscan-core/src/: json_healer.rs  lib.rs  score_engine.rs
scripts/: api_health_check.mjs  api_real_test.mjs  clean_innovations.ts  cleanse_domains.ts  create-agent.ts  migrate.sh  novostarchart-benchmark.mjs  postinstall.mjs  publish-agent.ts  quick-verify.mjs  seed_casevault.ts  seed_comprehensive.ts  seed_innovation_dna.cjs  seed_innovation_dna.mjs  seed_innovation_dna.ts  setup.mjs  update_seed_domains.cjs
(+484 files in other folders)
